# RTXDI

./: .gitmodules  CMakeLists.txt  ChangeLog.md  README.md
Doc/: Confidence.md  Integration.md  RestirGI.md  RtxdiApplicationBridge.md  ShaderAPI.md
Samples/FullSample/Source/: CMakeLists.txt  DLSS-DX12.cpp  DLSS-VK.cpp  DLSS.cpp  DLSS.h  NrdIntegration.cpp  NrdIntegration.h  Profiler.cpp  Profiler.h  RenderTargets.cpp  RenderTargets.h  RtxdiResources.cpp  RtxdiResources.h  SampleScene.cpp  SampleScene.h  Testing.cpp  UserInterface.cpp  UserInterface.h  main.cpp
Samples/FullSample/Source/DebugViz/: DebugVizPasses.cpp  DebugVizPasses.h  PackedDataVizPass.cpp  PackedDataVizPass.h
Samples/FullSample/Source/RenderPasses/: AccumulationPass.cpp  AccumulationPass.h  CompositingPass.cpp  CompositingPass.h  ConfidencePass.cpp  ConfidencePass.h  FilterGradientsPass.cpp  FilterGradientsPass.h  GBufferPass.cpp  GBufferPass.h  GenerateMipsPass.cpp  GenerateMipsPass.h  GlassPass.cpp  GlassPass.h  LightingPasses.cpp  LightingPasses.h  PrepareLightsPass.cpp  PrepareLightsPass.h  RenderEnvironmentMapPass.cpp  RenderEnvironmentMapPass.h  VisualizationPass.cpp  VisualizationPass.h
Samples/MinimalSample/Shaders/: CMakeLists.txt  Render.hlsl  ShaderParameters.h
Samples/MinimalSample/Shaders/RtxdiApplicationBridge/: RAB_RandomSamplerState.hlsli  RAB_Surface.hlsli  RtxdiApplicationBridge.hlsli
Samples/MinimalSample/Source/: RenderPass.cpp  RenderPass.h  UserInterface.cpp
Support/Tests/RtxdiRuntimeShaderTests/: CMakeLists.txt
Support/Tests/RtxdiRuntimeShaderTests/Shaders/: ResamplingCompileTest.hlsl
Support/Tests/RtxdiRuntimeShaderTests/Shaders/RtxdiApplicationBridge/: RAB_Buffers.glsli  RAB_Buffers.hlsli  RAB_LightInfo.hlsli  RAB_LightSample.hlsli  RAB_LightSampling.hlsli  RAB_RandomSamplerState.hlsli  RAB_Surface.hlsli  RtxdiApplicationBridge.glsli  RtxdiApplicationBridge.hlsli
rtxdi-sdk/include/rtxdi/: ResamplingFunctions.slangh  Reservoir.slangh
rtxdi-sdk/include/volumetrics/rtx/algorithm/: volume_composite_helpers.slangh  volume_integrator.slangh  volume_lighting.slangh
rtxdi-sdk/include/volumetrics/rtx/pass/volumetrics/: volume_restir.slangh
